--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap");
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+:root {
+  --primary: #6948ff;
+  --secondary: #553bcb;
+  --darkgrey: #22262a;
+  --lightgrey: #d3d3d3;
+  --grey: #808080;
+}
+
+body {
+  color: #333;
+  font-family: "Prompt", sans-serif;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  columns: white;
+}
+
+.primary-color {
+  color: var(--primary);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+button {
+  width: 100%;
+  padding: 8px 0;
+  border-radius: 4px;
+  border: 1px solid var(--primary);
+  background-color: var(--primary);
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  border: 1px solid var(--secondary);
+  background-color: var(--secondary);
 }
